--- a/index.html
+++ b/index.html
@@ -22,15 +22,59 @@
 </head>
 
 <body>
-    <!-- NavBar -->
-    <nav class="navbar navbar-light bg-light">
-        <div class="container-fluid">
-            <span class="navbar-brand mb-0 h1">Quiz-App</span>
+    <div class="player-panel"> 
+        <div class="" id="player-1">
+            <img class="" src="./img/circle.png" >Player 1
         </div>
-    </nav>
-
-    <h1>fhueohfdio</h1>
-
+       <div class="player-inactive" id="player-2">
+            <img class="" src="./img/cross.png" >Player 2
+       </div>
+       
+    </div>
+    <table>
+        <tr>
+            <td onclick="fillShape(0)">
+                <img id='circle-0' class="shape d-none" src="./img/circle.png" alt="" srcset="">
+                <img id='cross-0' class="shape d-none" src="./img/cross.png" alt="" srcset="">
+            </td>
+            <td onclick="fillShape(1)">
+                <img id='circle-1' class="shape d-none" src="./img/circle.png" alt="" srcset="">
+                <img id='cross-1' class="shape d-none" src="./img/cross.png" alt="" srcset="">
+            </td>
+            <td onclick="fillShape(2)">
+                <img id='circle-2' class="shape d-none" src="./img/circle.png" alt="" srcset="">
+                <img id='cross-2' class="shape d-none" src="./img/cross.png" alt="" srcset="">
+            </td>
+        </tr>
+        <tr>
+            <td onclick="fillShape(3)">
+                <img id='circle-3' class="shape d-none" src="./img/circle.png" alt="" srcset="">
+                <img id='cross-3' class="shape d-none" src="./img/cross.png" alt="" srcset="">
+            </td>
+            <td onclick="fillShape(4)">
+                <img id='circle-4' class="shape d-none" src="./img/circle.png" alt="" srcset="">
+                <img id='cross-4' class="shape d-none" src="./img/cross.png" alt="" srcset="">
+            </td>
+            <td onclick="fillShape(5)">
+                <img id='circle-5' class="shape d-none" src="./img/circle.png" alt="" srcset="">
+                <img id='cross-5' class="shape d-none" src="./img/cross.png" alt="" srcset="">
+            </td>
+        </tr>
+        <tr>
+            <td onclick="fillShape(6)">
+                <img id='circle-6' class="shape d-none" src="./img/circle.png" alt="" srcset="">
+                <img id='cross-6' class="shape d-none" src="./img/cross.png" alt="" srcset="">
+            </td>
+            <td onclick="fillShape(7)">
+                <img id='circle-7' class="shape d-none" src="./img/circle.png" alt="" srcset="">
+                <img id='cross-7' class="shape d-none" src="./img/cross.png" alt="" srcset="">
+            </td>
+            <td onclick="fillShape(8)">
+                <img id='circle-8' class="shape d-none" src="./img/circle.png" alt="" srcset="">
+                <img id='cross-8' class="shape d-none" src="./img/cross.png" alt="" srcset="">
+            </td>
+        </tr>
+    </table>
    
 
 </body>
