winning lines + animation added

--- a/index.html
+++ b/index.html
@@ -31,6 +31,20 @@
        </div>
        
     </div>
+
+    <!--Gewinn-Linien-->
+    <div id="line-0" class="winning-line" style="top: 200px;"></div>
+    <div id="line-1" class="winning-line" style="top: 340px;"></div>
+    <div id="line-2" class="winning-line" style="top: 480px;"></div>
+
+    <div id="line-3" class="winning-line make-vertikal" style="top: 338px;"></div>
+    <div id="line-4" class="winning-line make-vertikal" style="top: 340px; left: 750px;"></div>
+    <div id="line-5" class="winning-line make-vertikal" style="top: 338px; left: 485px;"></div>
+
+    <div id="line-6" class="winning-line" style="top: 340px; left: 625px; transform: rotate(45deg); transform: scaleX(0.0);"></div>
+    <div id="line-7" class="winning-line" style="top: 338px; left: 625px; transform: rotate(-45deg); transform: scaleX(0.0);"></div>
+
+   
     <table>
         <tr>
             <td onclick="fillShape(0)">
