gameOver-Screen added

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 </head>
 
 <body>
+    <img class="gameOver d-none" src="img/game-over.png" id="game-over" alt="">
     <div class="player-panel"> 
         <div class="" id="player-1">
             <img class="" src="./img/circle.png" >Player 1
