--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 
 <body>
     <img class="gameOver d-none" src="img/game-over.png" id="game-over" alt="">
+    <button id="restart-btn" class="restart-btn d-none" onclick="restart()">Restart</button>
     <div class="player-panel"> 
         <div class="" id="player-1">
             <img class="" src="./img/circle.png" >Player 1
